Bugfix/show hide button on ios (#197)
* Add ngrok tunnel to npm scripts

* Fix show hide button on ios

--- a/frontend/src/ui/password-input/toggle-password-button.css
+++ b/frontend/src/ui/password-input/toggle-password-button.css
@@ -1,11 +1,11 @@
-button[data-state="hidden"],
-button[data-state="visible"] {
+div[data-state="hidden"],
+div[data-state="visible"] {
 	display: grid;
 	place-items: center;
 }
 
-button[data-state="hidden"] > *,
-button[data-state="visible"] > * {
+div[data-state="hidden"] > *,
+div[data-state="visible"] > * {
 	grid-area: 1/1;
 }
 
@@ -15,13 +15,13 @@ button[data-state="visible"] > * {
 	transition: all 300ms ease-in-out;
 }
 
-button[data-state="hidden"] *[data-for-state="hidden"],
-button[data-state="visible"] *[data-for-state="visible"] {
+div[data-state="hidden"] *[data-for-state="hidden"],
+div[data-state="visible"] *[data-for-state="visible"] {
 	transform: translateY(0%);
 }
 
-button[data-state="hidden"] *[data-for-state="visible"],
-button[data-state="visible"] *[data-for-state="hidden"] {
+div[data-state="hidden"] *[data-for-state="visible"],
+div[data-state="visible"] *[data-for-state="hidden"] {
 	transform: translateY(-50%);
 	opacity: 0;
 }
